--- a/Settimana_1/Lezione_3.html
+++ b/Settimana_1/Lezione_3.html
@@ -169,6 +169,7 @@ public class PrimoProgramma {
             <li><strong>Garbage Collection:</strong> Esplora i meccanismi di gestione automatica della memoria in Java e gli algoritmi di raccolta utilizzati. Consulta la documentazione ufficiale di <a href="https://docs.oracle.com/javase/specs/">Java SE Specifications</a>.</li>
             <li><strong>Stream API:</strong> Approfondisci l'uso degli Stream introdotti in Java 8 per elaborare dati in modo funzionale. Un'ottima guida è disponibile su <a href="https://www.baeldung.com/java-8-streams">Baeldung</a>.</li>
             <li><strong>Debugging:</strong> Impara a tracciare ed eseguire il debug dei programmi utilizzando strumenti come IntelliJ IDEA o Eclipse. Segui il tutorial su <a href="https://www.jetbrains.com/help/idea/debugging-your-first-java-application.html">JetBrains</a>.</li>
+            <li><strong>Classe Random:</strong> La classe <code>Random</code> in Java viene utilizzata per generare numeri casuali. Puoi esplorare metodi come <code>nextInt()</code> per numeri interi e <code>nextDouble()</code> per numeri decimali casuali. Per una guida dettagliata, visita <a href="https://docs.oracle.com/javase/8/docs/api/java/util/Random.html">Random Documentation</a>.</li>
         </ul>
     </div>
 
