--- a/Settimana_1/Lezione_4.html
+++ b/Settimana_1/Lezione_4.html
@@ -139,13 +139,42 @@ public class Main {
 </ul>
 </section>
 <section class="advanced">
-<h3>Approfondimenti Avanzati</h3>
-<p>Per gli studenti più esperti, consigliamo di esplorare i seguenti argomenti:</p>
-<ul>
-<li>Pattern di progettazione orientati agli oggetti, come il Singleton e il Factory.</li>
-<li>Approfondimento su Java Reflection per l'ispezione dinamica di classi e oggetti.</li>
-<li>L'uso di librerie avanzate come Lombok per semplificare l'implementazione di getter e setter.</li>
-</ul>
+    <h2>Approfondimenti</h2>
+    <p>Per gli studenti più avanzati, esploriamo le seguenti tematiche:</p>
+    <ul>
+        <li>Analisi delle performance delle principali implementazioni delle collezioni</li>
+        <li>Uso dei metodi avanzati nelle collezioni, come <code>computeIfAbsent</code> e <code>replaceAll</code> in <code>Map</code></li>
+        <li>Personalizzazione di collezioni tramite classi anonime o lambda</li>
+        <li>Introduzione alle collezioni immutabili in Java 9 e successivi</li>
+    </ul>
+    <p>Esempio di utilizzo di <code>computeIfAbsent</code>:</p>
+    <pre><code class="language-java">import java.util.HashMap;
+
+public class Main {
+public static void main(String[] args) {
+HashMap<String, Integer> wordCounts = new HashMap<>();
+
+String[] words = {"apple", "banana", "apple", "orange", "banana", "apple"};
+for (String word : words) {
+    wordCounts.computeIfAbsent(word, k -> 0);
+    wordCounts.put(word, wordCounts.get(word) + 1);
+}
+
+wordCounts.forEach((word, count) -> System.out.println(word + ": " + count));
+}
+}</code></pre>
+
+    <h3>Note sulle classi List e Map</h3>
+    <p><strong>List:</strong> La classe List rappresenta una sequenza ordinata di elementi. È possibile accedere agli elementi tramite un indice e possono essere presenti duplicati. Implementazioni comuni includono:</p>
+    <ul>
+        <li><code>ArrayList</code>: Ottimizzata per accessi rapidi agli elementi tramite indice.</li>
+        <li><code>LinkedList</code>: Ideale per inserimenti e rimozioni frequenti, grazie alla sua struttura a nodi collegati.</li>
+    </ul>
+    <p><strong>Map:</strong> La classe Map memorizza coppie chiave-valore, dove ogni chiave è unica. Le implementazioni comuni sono:</p>
+    <ul>
+        <li><code>HashMap</code>: Offre prestazioni elevate per operazioni di ricerca, inserimento e rimozione.</li>
+        <li><code>TreeMap</code>: Ordina le chiavi in base all'ordine naturale o a un comparatore specificato.</li>
+    </ul>
 </section>
 <footer class="footer">
 <a class="footer-logo" href="/index.html">
