--- a/Antologia/index.html
+++ b/Antologia/index.html
@@ -95,7 +95,7 @@
             <span class="title">Giorno 6:</span>
           </a>
           <div class="content">
-              - <strong>Fondamenti Avanzati di Java:</strong> classi, metodi, costruttori e utilizzo delle interfacce.<br />
+              - <strong>Fondamenti di Java:</strong> classi, metodi, costruttori e utilizzo delle interfacce.<br />
               - <strong>Introduzione alle Collezioni:</strong> panoramica su ArrayList, HashMap e HashSet.<br />
               - <strong>Esempi Pratici:</strong> implementazione di strutture dati comuni con le collezioni di base.
           </div>
