--- a/Antologia/ArgomentiAggiuntivi/GestioneDate.html
+++ b/Antologia/ArgomentiAggiuntivi/GestioneDate.html
@@ -13,7 +13,7 @@
 
     <main class="content">
 
-        <section>
+        <section class="section">
             <h2>Introduzione</h2>
             <p>
                 In questa lezione aggiuntiva ci focalizzeremo sull'uso delle date in Java, un argomento fondamentale 
