--- a/Antologia/Settimana_2/Lezione_7.html
+++ b/Antologia/Settimana_2/Lezione_7.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Lezione Giorno 7: Stream API, Optional e Metodi Statici nelle Interfacce</h1>
 
-    <section class="intro">
+    <section class="section">
         <h2>Introduzione</h2>
         <p>Benvenuti alla lezione 7! Oggi esploreremo alcune delle caratteristiche più potenti introdotte con Java 8: la
             <strong>Stream API</strong>, la classe <strong>Optional</strong>, e i <strong>metodi statici nelle
